--- a/style.css
+++ b/style.css
@@ -40,5 +40,10 @@ align-items: center;
     width: 100%;
     margin-bottom: 5px;
 }
-
+.prevOrNextMonthButton{
+    color: rgb(255, 255, 255);
+    background-color: rgb(175, 175, 175);
+    border-radius: 5px;
+    border: 1px solid gray;
+}
 
