--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-.container{
+body{
+    margin: 0;
+    padding: 0;
+    background-color: rgb(39, 39, 39);
+    color: white;
+}
+#mainContainer{
     width:100vw;
     height: 100vh;
     display: flex;
@@ -35,10 +41,22 @@ align-items: center;
     height: 100%;
     margin-right: 5px;
 }
+.dateButton,.todayButton{
+    background-color: whitesmoke;
+    border: 1px solid black;
+    border-radius: 5px;
+}
 .d>button{
     height: 80px;
     width: 100%;
     margin-bottom: 5px;
+}
+.d>button:hover{
+    background-color: rgb(163, 113, 6);
+
+}
+.todayButton{
+    background-color: orange;
 }
 .prevOrNextMonthButton{
     color: rgb(255, 255, 255);
@@ -46,4 +64,57 @@ align-items: center;
     border-radius: 5px;
     border: 1px solid gray;
 }
-
+#popUpWindow{
+    position: absolute;
+    left:0;
+    top:0;
+    width: 100vw;
+    height:100vh;
+    z-index: 1;
+    padding:0;
+    margin:0;
+    background-color: rgba(0, 0, 0, 0.85);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+#popUpContainer{
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+align-items: flex-start;
+width: 50vw;
+height:50vh;
+background-color: rgb(134, 131, 131);
+box-shadow: 0px 0px 50px 2px red;
+border: 1px solid black;
+border-radius: 15px;
+}
+#closePopUpButton{
+align-self: flex-end;
+height: 30px;
+width: 30px;
+margin: 10px 10px 0 0;
+border: 1px solid red;
+background-color: red;
+color: rgb(179, 0, 0);
+border-radius: 25px;
+}
+#closePopUpButton:hover{
+    color: black;
+}
+#popUpContent{
+    width: 90%;
+    padding: 5%;
+    height: 80%;
+    display: flex;
+    flex-direction: row;
+}
+.contentContainers{
+    width: 50%;
+    height: 100%;
+}
+.clientDataInputs{
+    width: 100%;
+}
